feature: hadoop demo for file system.